# DAYamlChecker

./: .gitignore  .pre-commit-config.yaml  README.md  mcp-server.json  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: ci-checker.yml
lib-js/: docassembleSrc.mts  index.ts
src/dayamlchecker/: __main__.py  _files.py  _jinja.py  check_questions_urls.py  cli.py  code_formatter.py  generate_mcp_config.py  messages.py  yaml_structure.py
src/dayamlchecker/mcp/: server.py
tests/: _cli_helpers.py  test_code_formatter.py  test_code_formatter_cli.py  test_dayaml_cli.py  test_generate_mcp_config.py  test_yaml_structure.py  test_yaml_structure_cli.py
tests/fixtures/: large_invalid_interview.yml  large_invalid_jinja_syntax.yml  large_invalid_jinja_template.yml
tools/: generate_mcp_config.py
