[project]
name = "dayamlchecker"
version = "1.1.0"
description = "An LSP for Docassemble YAML interviews"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "esprima>=4.0.1",
    "jinja2>=3.0",
    "mako>=1.3.10",
    "black>=24.0.0",
    "ruamel.yaml>=0.18.0",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  { name="Bryce Willey", email="bryce.steven.willey@gmail.com" },
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
dayamlchecker = ["py.typed"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
dayamlchecker = "dayamlchecker.yaml_structure:main"
dayamlchecker-fmt = "dayamlchecker.code_formatter:main"

[tool.mypy]
mypy_path = "src"
exclude = ["^build/"]
explicit_package_bases = true
